build/log/idf_py_stdout_output_10080
[1/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_flash_encrypt_hal_iram.c.obj
[2/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/timer_hal_iram.c.obj
[3/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/timer_hal.c.obj
[4/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/i2c_hal_iram.c.obj
[5/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/rmt_hal.c.obj
[6/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/ledc_hal.c.obj
[7/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/i2c_hal.c.obj
[8/650] Performing build step for 'bootloader'
[1/1] cd /home/edgie/eclipse-workspace/usb_hid_test/build/bootloader/esp-idf/esptool_py && /home/edgie/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/edgie/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/edgie/eclipse-workspace/usb_hid_test/build/bootloader/bootloader.bin
Bootloader binary size 0x5590 bytes. 0x1a70 bytes (24%) free.
[9/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/ledc_hal_iram.c.obj
[10/650] No install step for 'bootloader'
[11/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/pcnt_hal.c.obj
[12/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/adc_oneshot_hal.c.obj
[13/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/systimer_hal.c.obj
[14/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/sdm_hal.c.obj
[15/650] Completed 'bootloader'
[16/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/adc_hal_common.c.obj
[17/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/twai_hal.c.obj
[18/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/twai_hal_iram.c.obj
[19/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/brownout_hal.c.obj
[20/650] Building C object esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj
FAILED: esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj 
/home/edgie/.espressif/tools/xtensa-esp32s2-elf/esp-2022r1-11.2.0/xtensa-esp32s2-elf/bin/xtensa-esp32s2-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2938-g8bf18b76ac\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/edgie/eclipse-workspace/usb_hid_test/build/config -I/home/edgie/esp/esp-idf/components/esp_system/include -I/home/edgie/esp/esp-idf/components/esp_system/port/include -I/home/edgie/esp/esp-idf/components/esp_system/port/. -I/home/edgie/esp/esp-idf/components/esp_system/port/soc -I/home/edgie/esp/esp-idf/components/esp_system/port/include/private -I/home/edgie/esp/esp-idf/components/newlib/platform_include -I/home/edgie/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/edgie/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/edgie/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/edgie/esp/esp-idf/components/freertos/esp_additions/include -I/home/edgie/esp/esp-idf/components/esp_hw_support/include -I/home/edgie/esp/esp-idf/components/esp_hw_support/include/soc -I/home/edgie/esp/esp-idf/components/esp_hw_support/include/soc/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_hw_support/port/esp32s2/. -I/home/edgie/esp/esp-idf/components/esp_hw_support/port/esp32s2/private_include -I/home/edgie/esp/esp-idf/components/heap/include -I/home/edgie/esp/esp-idf/components/log/include -I/home/edgie/esp/esp-idf/components/soc/include -I/home/edgie/esp/esp-idf/components/soc/esp32s2/. -I/home/edgie/esp/esp-idf/components/soc/esp32s2/include -I/home/edgie/esp/esp-idf/components/hal/esp32s2/include -I/home/edgie/esp/esp-idf/components/hal/include -I/home/edgie/esp/esp-idf/components/hal/platform_port/include -I/home/edgie/esp/esp-idf/components/esp_rom/include -I/home/edgie/esp/esp-idf/components/esp_rom/include/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_rom/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_common/include -I/home/edgie/esp/esp-idf/components/xtensa/include -I/home/edgie/esp/esp-idf/components/xtensa/esp32s2/include -I/home/edgie/esp/esp-idf/components/lwip/include -I/home/edgie/esp/esp-idf/components/lwip/include/apps -I/home/edgie/esp/esp-idf/components/lwip/include/apps/sntp -I/home/edgie/esp/esp-idf/components/lwip/lwip/src/include -I/home/edgie/esp/esp-idf/components/lwip/port/esp32/include -I/home/edgie/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/edgie/esp/esp-idf/components/spi_flash/include -I/home/edgie/esp/esp-idf/components/esp_timer/include -I/home/edgie/esp/esp-idf/components/pthread/include -I/home/edgie/esp/esp-idf/components/bootloader_support/include -I/home/edgie/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/edgie/esp/esp-idf/components/efuse/include -I/home/edgie/esp/esp-idf/components/efuse/esp32s2/include -I/home/edgie/esp/esp-idf/components/driver/include -I/home/edgie/esp/esp-idf/components/driver/deprecated -I/home/edgie/esp/esp-idf/components/driver/esp32s2/include -I/home/edgie/esp/esp-idf/components/esp_pm/include -I/home/edgie/esp/esp-idf/components/esp_ringbuf/include -I/home/edgie/esp/esp-idf/components/esp_partition/include -I/home/edgie/esp/esp-idf/components/esp_gdbstub/include -I/home/edgie/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/edgie/esp/esp-idf/components/esp_gdbstub/esp32s2 -I/home/edgie/esp/esp-idf/components/esp_app_format/include -I/home/edgie/esp/esp-idf/components/vfs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/edgie/eclipse-workspace/usb_hid_test=. -fmacro-prefix-map=/home/edgie/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -Wno-format -MD -MT esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj -MF esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj.d -o esp-idf/esp_system/CMakeFiles/__idf_esp_system.dir/port/soc/esp32s2/usb_console.c.obj -c /home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c
/home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c: In function 'esp_usb_console_init':
/home/edgie/esp/esp-idf/components/esp_system/port/soc/esp32s2/usb_console.c:291:5: error: implicit declaration of function 'ets_install_putc1' [-Werror=implicit-function-declaration]
  291 |     ets_install_putc1(&esp_usb_console_write_char);
      |     ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[21/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/sha_hal.c.obj
[22/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/aes_hal.c.obj
[23/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_flash_hal_iram.c.obj
[24/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_slave_hal.c.obj
[25/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/i2s_hal.c.obj
[26/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/usb_hal.c.obj
[27/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_slave_hal_iram.c.obj
[28/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_hal.c.obj
[29/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/touch_sensor_hal.c.obj
[30/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_hal_iram.c.obj
[31/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/adc_hal.c.obj
[32/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_flash_hal_gpspi.c.obj
[33/650] Building C object esp-idf/hal/CMakeFiles/__idf_hal.dir/spi_slave_hd_hal.c.obj
ninja: build stopped: subcommand failed.
